last version before making premium version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BudgetMan</string>
+    <string name="app_name">Expense Tracker</string>
     <string name="add_expense">Add Expense</string>
     <string name="add_income">Add Income</string>
     <string name="amount">Amount</string>
@@ -14,11 +14,16 @@
     <string name="total_expense">Total Expense</string>
     <string name="remaining">Remaining</string>
     <string name="transaction_limit_reached">Transaction Limit Reached</string>
+    <string name="add_transaction">Add Transaction</string>
 
     <string-array name="transaction_categories">
         <item>Food</item>
         <item>Transport</item>
         <item>Bills</item>
+        <item>Housing</item>
+        <item>Savings</item>
+        <item>Debt Payments</item>
+        <item>Health</item>
         <item>Other</item>
     </string-array>
 
